# replitclubdues

./: README.md  app.py  pyproject.toml  replit.md
data/: country_clubs.csv
utils/: data_loader.py  fallback_data.py  web_scraper.py  web_scraper_backup.py
