[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.4",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pandas>=2.3.2",
    "reportlab>=4.4.3",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
]
